k8s/deploy-be-shopping.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: be-deploy
    labels:
        tier: python_backend
spec:
    replicas: 3
    selector:
        matchLabels:
            tier: python_backend
    template:
        metadata:
            name: pod-react-fe
            labels:
                tier: python_backend
        spec:
            containers:
                - name: be-shopping
                  image: crileroro/be-shopping-python
                  ports:
                    - containerPort: 5000
