k8s/clusterip-be.yaml
apiVersion: v1
kind: Service
metadata:
    name: be-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        run: python_backend
    ports:
        - port: 5000
          targetPort: 5000
