k8s/clusterip-fe.yaml
apiVersion: v1
kind: Service
metadata:
    name: fe-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        run: react_frontend
    ports:
        - port: 5000
          targetPort: 5000
