k8s/service-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: service-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: fe-cluster-ip-service
          servicePort: 3000
      - path: /api/?(.*)
        backend:
          serviceName: be-cluster-ip-service
          servicePort: 5000
